[tool.poetry]
name = "msc-research"
version = "0.1.0"
description = ""
authors = ["Jesse Frost <jessefrost999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^2.8.5"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
