[tool.poetry]
name = "msc-research"
version = "0.1.0"
description = ""
authors = ["Jesse Frost <jessefrost999@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
networkx = "^2.8.5"
matplotlib = "^3.5.2"
scipy = "^1.9.0"
pandas = "^1.4.3"
SQLAlchemy = "^1.4.39"
psycopg2-binary = "^2.9.3"
GeoAlchemy2 = "^0.12.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
